--- a/index.html
+++ b/index.html
@@ -26,13 +26,12 @@
     <div id="slides">
       <div class="overlay"></div>
       <div class="slides-container">
-        <img src="img/lemnis1.png" alt="" />
-        <img src="img/lemnis2.png" alt="" />
+        <img src="img/BoE.png" alt="" />
       </div>
       <div class="titleMessage">
         <div class="heading">
-          <p class="main">Subuthai's Very Simple Portfolio</p>
-          <p class="sub typed"></p>
+          <p class="main">Jamie Lenney/p>
+          <p class="sub typed">I'm a research Economist at the Bank of England</p>
         </div>
       </div>
     </div>
@@ -243,14 +242,7 @@
 
     <!-- Copyright -->
 
-    <div class="copyrightSection">
-      <div class="col-md-12 text-center">
-        <p>
-          copyright &copy; 2021 some rights reserved | 85% of website was made
-          by subuthai
-        </p>
-      </div>
-    </div>
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/countup.js/1.8.2/countUp.min.js"></script>
     <script src="js/countUp-jquery.js"></script>
