--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Subuthai's Very Simple Portfolio</title>
+    <title>Jamie Lenney</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <link rel="stylesheet" href="css/owl.carousel.min.css" />
@@ -26,11 +26,11 @@
     <div id="slides">
       <div class="overlay"></div>
       <div class="slides-container">
-        <img src="img/BoE.png" alt="" />
+        <img src="img/BoE.jpeg" alt="" />
       </div>
       <div class="titleMessage">
         <div class="heading">
-          <p class="main">Jamie Lenney/p>
+          <p class="main">Jamie Lenney>
           <p class="sub typed">I'm a research Economist at the Bank of England</p>
         </div>
       </div>
@@ -61,12 +61,6 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#skills">Skills</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#stats">Stats</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#contact">Contact</a>
           </li>
         </ul>
       </div>
@@ -100,20 +94,6 @@
               et vestibulum quis, semper vitae augue.
             </p>
 
-            <p>
-              Aenean tincidunt nisl orci, sed faucibus augue lobortis ac. Ut ac
-              fermentum leo, quis rhoncus sapien. Nulla facilisi. Fusce eget
-              accumsan sapien. Ut lacinia ex eu feugiat commodo. Curabitur
-              varius lectus at risus porttitor porttitor. Vivamus suscipit
-              sodales metus vel pulvinar. Duis fringilla semper augue vitae
-              venenatis. Praesent posuere, nunc non condimentum egestas, magna
-              risus ornare metus, nec iaculis enim orci at ante. Nam eros
-              turpis, pharetra non imperdiet vitae, dictum quis mauris. Vivamus
-              egestas aliquet risus, quis ultricies arcu tincidunt vel.
-              Curabitur luctus ac orci ut consectetur. Nulla rutrum orci quis
-              elit elementum aliquet. Proin at augue libero. Pellentesque
-              habitant morbi tristique senectus et netus et malesuada fames ac
-              turpis egestas. Integer imperdiet dui a vulputate cursus.
             </p>
           </div>
         </div>
@@ -121,150 +101,16 @@
     </div>
 
     <!-- Skills -->
-    <div id="skills" class="skillsSection section">
+    <div id="Research" class="skillsSection section">
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
             <h2>MY SKILLS</h2>
             <p>My skills in web & programming languages.</p>
           </div>
-
-          <div class="owl-carousel owl-theme">
-            <div class="skill">
-              <span class="chart" data-percent="85">
-                <span class="percent">85</span>
-                <canvas height="152" width="152"></canvas>
-              </span>
-              <h4>HTML</h4>
-            </div>
-
-            <div class="skill">
-              <span class="chart" data-percent="60">
-                <span class="percent">60</span>
-                <canvas height="152" width="152"></canvas>
-              </span>
-              <h4>CSS</h4>
-            </div>
-
-            <div class="skill">
-              <span class="chart" data-percent="80">
-                <span class="percent">80</span>
-                <canvas height="152" width="152"></canvas>
-              </span>
-              <h4>Javascript</h4>
-            </div>
-
-            <div class="skill">
-              <span class="chart" data-percent="45">
-                <span class="percent">45</span>
-                <canvas height="152" width="152"></canvas>
-              </span>
-              <h4>C#</h4>
-            </div>
-          </div>
-        </div>
       </div>
     </div>
 
-    <!-- Stats -->
-    <div id="stats" class="statsSection section">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-3 col-sm-6">
-            <div class="squareItem">
-              <div class="squareInnerContainer">
-                <div class="squareIcon">
-                  <i class="fas fa-globe"></i>
-                </div>
-                <div class="squareContent">
-                  <h2 class="counter">59</h2>
-                  <h3>Projects Done</h3>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-3 col-sm-6">
-            <div class="squareItem">
-              <div class="squareInnerContainer">
-                <div class="squareIcon">
-                  <i class="fas fa-address-book"></i>
-                </div>
-                <div class="squareContent">
-                  <h2 class="counter">14</h2>
-                  <h3>Clients</h3>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-3 col-sm-6">
-            <div class="squareItem">
-              <div class="squareInnerContainer">
-                <div class="squareIcon">
-                  <i class="fa fa-coffee"></i>
-                </div>
-                <div class="squareContent">
-                  <h2 class="counter">999999</h2>
-                  <h3>Cups Of Coffee</h3>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-3 col-sm-6">
-            <div class="squareItem">
-              <div class="squareInnerContainer">
-                <div class="squareIcon">
-                  <i class="fas fa-robot"></i>
-                </div>
-                <div class="squareContent">
-                  <h2 class="counter">3</h2>
-                  <h3>Discord Bots I Made</h3>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Contact -->
-    <div id="contact" class="contactSection section">
-      <div class="col-md-12 text-center">
-        <p class="subHeading">Do you want to contact me?</p>
-        <h2>Send an email now.</h2>
-        <a href="mailTo:contact@subuthai.xyz" class="contactButton"
-          >Contact me!</a
-        >
-      </div>
-    </div>
-
-    <!-- Copyright -->
-
-
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/countup.js/1.8.2/countUp.min.js"></script>
-    <script src="js/countUp-jquery.js"></script>
-    <script src="js/jquery.superslides.min.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/jquery.easypiechart.min.js"></script>
-    <script src="js/typed.min.js"></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      type="text/javascript"
-      src="https://unpkg.com/isotope-layout@3.0.6/dist/isotope.pkgd.min.js"
-    ></script>
-    <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
-    <script src="js/script.js"></script>
+   
   </body>
 </html>
