--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
               I am a research economist at the Bank of England interested in computational and empircal macroeconomics; focusing on the intersection of household heterogeneity and monetary policy transmission.
             </p>
           </p allign="left"> Contact:<a href="jamie.lenney@bankofengland.co.uk">jamie.lenney@bankofengland.co.uk </a> </p>
-          </p> (<a href="https://www.google.com/url?q=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fjamie-lenney-70144945%2F&sa=D">LinkedIn</a>,<a href="https://www.google.com/url?q=https%3A%2F%2Fgithub.com%2Fs0840389&sa=D">GitHub</a> ) </p>
+          </p> (<a href="https://www.google.com/url?q=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fjamie-lenney-70144945%2F&sa=D">LinkedIn</a>,
+          <a href="https://github.com/s0840389/jamielenneyecon/blob/main/CV%20Jamie%20Lenney%202023.pdf">CV</a>)
+          <a href="https://www.google.com/url?q=https%3A%2F%2Fgithub.com%2Fs0840389&sa=D">GitHub</a> ) </p>
             </p>
           </div>
         </div>
