--- a/index.html
+++ b/index.html
@@ -28,31 +28,6 @@
     <nav id="navigation" class="navbar navbar-expand-lg">
       <a class="navbar-brand" href="#">Jamie Lenney</a>
 
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNav"
-        aria-controls="navbarNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="#about"
-              >About Me <span class="sr-only"></span
-            ></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#skills">Skills</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
 
     <!-- About Me -->
     <div id="about" class="section">
@@ -69,15 +44,15 @@
             </p>
           </p allign="left"> Contact:<a href="jamie.lenney@bankofengland.co.uk">jamie.lenney@bankofengland.co.uk </a> </p>
           </p> (<a href="https://www.google.com/url?q=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fjamie-lenney-70144945%2F&sa=D">LinkedIn</a>,
-          <a href="https://github.com/s0840389/jamielenneyecon/blob/main/CV%20Jamie%20Lenney%202023.pdf">CV</a>)
-          <a href="https://www.google.com/url?q=https%3A%2F%2Fgithub.com%2Fs0840389&sa=D">GitHub</a> ) </p>
+          <a href="https://github.com/s0840389/jamielenneyecon/blob/main/CV%20Jamie%20Lenney%202023.pdf">CV</a>,
+          <a href="https://www.google.com/url?q=https%3A%2F%2Fgithub.com%2Fs0840389&sa=D">GitHub</a>) </p>
             </p>
           </div>
         </div>
       </div>
     </div>
 
-    <!-- Skills -->
+    <!-- Research -->
     <div id="Research" class="skillsSection section">
       <div class="container">
         <div class="row">
