added lfs betas

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
             <h2>Current work</h2>
               
-              <p allign="left"> <a href="https://github.com/s0840389/jamielenneyecon/blob/main/UK_Labour_Force_Betas.pdf"> GDP Betas in the UK</a>
+              <p allign="left"> <a href="https://github.com/s0840389/jamielenneyecon/blob/main/UK_Labour_Force_Betas.pdf"> GDP Betas in the UK</a> Oct 2023 Conference Draft. Key, Tomas., & Lenney,J.</p>
 
               <h2>Publications and Working Papers</h2>
               
