updated betas paper

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
             <a href="https://www.google.com/url?q=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fjamie-lenney-70144945%2F&sa=D">LinkedIn</a>,
           <a href="https://www.google.com/url?q=https%3A%2F%2Fgithub.com%2Fs0840389&sa=D">GitHub</a>) </p>
             </p>
+
+
           </div>
   
 
@@ -60,7 +62,8 @@
 
             <h2>Current work</h2>
               
-              <p allign="left"> <a href="https://github.com/s0840389/jamielenneyecon/blob/main/UK_Labour_Force_Betas.pdf"> GDP Betas in the UK</a> Oct 2023 Conference Draft. Key, Tomas., & Lenney,J.</p>
+              <p allign="left"> <a href="https://github.com/s0840389/jamielenneyecon/blob/main/UK_Labour_Force_Betas.pdf"> The Impact of Aggregate Fluctuations Across the UK
+                Income Distribution</a> Oct 2023 Conference Draft. Key, Tomas., & Lenney,J.</p>
 
               <h2>Publications and Working Papers</h2>
               
