added res slides

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </div> -->
 
               <p allign="left"> <a href="https://github.com/s0840389/jamielenneyecon/blob/main/UK_Labour_Force_Betas.pdf"> The Impact of Aggregate Fluctuations Across the UK
-                Income Distribution</a> Dec 2023 Conference Draft. Key, Tomas., & Lenney,J.</p>
+                Income Distribution</a> Dec 2023 Conference Draft. Key, Tomas., & Lenney,J. <a href="https://github.com/s0840389/jamielenneyecon/blob/main/RESslides.pdf">[Slides]</a></p>
 
               <h2>Publications and Working Papers</h2>
               
