updated beta link to swp web link

--- a/index.html
+++ b/index.html
@@ -69,11 +69,10 @@
                 <img src="img/irf.png" alt="Partial equilibrium IRF from a HANK model with private landlords.">
             </div> -->
 
-              <p allign="left"> <a href="https://github.com/s0840389/jamielenneyecon/blob/main/UK_Labour_Force_Betas.pdf"> The Impact of Aggregate Fluctuations Across the UK
-                Income Distribution</a> Dec 2023 Conference Draft. Key, Tomas., & Lenney,J. <a href="https://github.com/s0840389/jamielenneyecon/blob/main/RESslides.pdf">[Slides]</a></p>
-
               <h2>Publications and Working Papers</h2>
               
+              <p allign="left"> <a href="https://www.bankofengland.co.uk/-/media/boe/files/working-paper/2024/the-impact-of-aggregate-fluctuations-across-the-uk-income-distribution.pdf"> The Impact of Aggregate Fluctuations Across the UK
+                Income Distribution</a> July 2024. Bank of England Working Paper No. 1083. Key, Tomas., & Lenney,J. <a href="https://github.com/s0840389/jamielenneyecon/blob/main/RESslides.pdf">[Slides]</a></p>
              
 
               <p allign="left"> <a href="https://www.bankofengland.co.uk/working-paper/2022/monetary-policy-transmission-the-labour-share-and-hank-models">Monetary Policy Transmission, the Labour Share and HANK Models</a>
