--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                </p>
 
                <p allign="left"> <a href="https://www.bankofengland.co.uk/-/media/boe/files/working-paper/2024/the-impact-of-aggregate-fluctuations-across-the-uk-income-distribution.pdf"> The Impact of Aggregate Fluctuations Across the UK
-                Income Distribution</a> July 2024. Bank of England Working Paper No. 1083. Key, Tomas., & Lenney,J. <a href="https://github.com/s0840389/jamielenneyecon/blob/main/RESslides.pdf">[Slides]</a></p>
+                Income Distribution</a> July 2024. Bank of England Working Paper No. 1083. Key, Tomas., & Lenney,J.  <a href="https://github.com/s0840389/jamielenneyecon/blob/main/UK_Betas_EER_submit.pdf">[Latest draft]</a></p>
              
               <!--<div class="image-container">
                 <img src="img/irf.png" alt="Partial equilibrium IRF from a HANK model with private landlords.">
