addeds slides page and pse sldies

--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
 
     <!-- Navbar -->
     <nav id="navigation" class="navbar navbar-expand-lg">
-      <a class="navbar-brand" href="#">Jamie Lenney</a> 
+      <a class="navbar-brand" href="#">Jamie Lenney</a>
+      <div class="navbar-nav ml-auto">
+        <a class="nav-link" href="slides.html">Slides</a>
+      </div>
     </nav>
 
 
