Updated fire slides link

--- a/slides.html
+++ b/slides.html
@@ -49,7 +49,7 @@ Housing and Rental Sectors</a> [PSE Sep 2025 ]</p>
             <p allign="left"> <b></b> <a href="https://github.com/s0840389/jamielenneyecon/blob/main/MPHPR_FRB_Slides.pdf">Monetary Transmission in a HANK Model with
 Housing and Rental Sectors</a> [FRB Sep 2025 ]</p>
 
-            <p allign="left"> <b>Flexible deviations from FIRE in the Sequence Space.</b>   <a href="https://github.com/s0840389/jamielenneyecon/blob/main/HANK_Expectations_BoEbrownbag.pdf">[Slides]</a></p>
+            <p allign="left"> <b></b>   <a href="https://github.com/s0840389/jamielenneyecon/blob/main/HANK_Expectations_BoEbrownbag.pdf">Flexible deviations from FIRE in the Sequence Space</a> [BoE April 2025]</p>
 
 
               
